Alteraçoes no modulo admin - data 31/03/2013

--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -134,7 +134,7 @@
                                     <!-- <li class="dropdown-footer"><a href=""></a></li> -->
                                 </ul><!--notification-->
                             </div>
-                            <div class="btn-group">
+                            <!--<div class="btn-group">
                                 <a class="btn btn-inverse btn-small dropdown-toggle" data-toggle="dropdown" href="#">
                                     Shortcut
                                 </a>
@@ -165,7 +165,7 @@
                                     <li class="divider"></li>
                                     <li><a tabindex="-1" href="#">Something else here</a></li>
                                 </ul>
-                            </div>
+                            </div>-->
                             <div class="btn-group">
                                 <a class="btn btn-inverse btn-small" href="#">Outras Ações</a>
                             </div>
@@ -381,14 +381,14 @@
                                     <li class="title muted">Opções</li>
                                     <li class="divider"></li>
                                     <li>
-                                        <a href="form.html" title="form element" class="corner-all">
+                                        <a href="/admin/mensagem/enviar" title="enviar mensagem" class="corner-all">
                                             <i class="icon-envelope"></i>&nbsp;
                                             <span class="sidebar-text">Enviar</span>
                                         </a>
                                     </li>
                                     <li class="divider"></li>
                                     <li>
-                                        <a href="code_editor.html" title="code editor" class="corner-all">
+                                        <a href="/admin/mensagem/historico" title="Ver Histórico de Mensagens" class="corner-all">
                                             <i class="icon-file"></i>&nbsp;
                                             <span class="sidebar-text">Histórico de Mensagens</span>
                                         </a>
@@ -794,7 +794,7 @@
                                 <ul class="sr-control-item">
                                     <li class="active"><a href="#contact" data-toggle="tab" title="Fale Conosco"><i class="icon-user"></i></a></li>
                                     <li><a href="#alt1" data-toggle="tab" title="Estoque de vacinas"><i class="icon-briefcase"></i></a></li>
-                                    <li rel="tooltip-bottom" title="ver site"><a href="simova.local" target="_BLANK"><i class="icon-globe"></i></a></li>
+                                    <li rel="tooltip-bottom" title="ver site"><a href="http://simova.local" target="_BLANK"><i class="icon-globe"></i></a></li>
                                 </ul>
                             </div><!-- /sidebar-right-control-->
                             <!-- sidebar-right-content -->
