--- a/application/modules/admin/views/scripts/campanha/cadastro-campanha.phtml
+++ b/application/modules/admin/views/scripts/campanha/cadastro-campanha.phtml
@@ -1,6 +1,6 @@
 <script type="text/javascript" src="/admin/js/pessoa.js"></script>
 <fieldset>
-    <legend>Alterar Perfil</legend>
+    <legend>Cadastrar Campanhas</legend>
     <?php
     if ($this->mensagem):
         ?>
@@ -27,45 +27,25 @@
                             <div class="span6">
                                 <div class="control-group">
                                     <div class="control-group">
-                                        <label for="inputEmail" class="control-label">Usuário:</label>
+                                        <label for="inputEmail" class="control-label">Nome da Campanha:</label>
                                         <div class="controls">
                                             <input type="text" placeholder="Text input">
                                         </div>
                                     </div>
-                                    <label for="inputEmail" class="control-label">Nome Completo:</label>
+                                    <label for="inputEmail" class="control-label">Data Inicial:</label>
                                     <div class="controls">
                                         <input type="text" placeholder="Text input">
                                     </div>
                                 </div>
                                 <div class="control-group">
-                                    <label for="inputEmail" class="control-label">E-mail:</label>
+                                    <label for="inputEmail" class="control-label">Data Final:</label>
                                     <div class="controls">
                                         <input type="text" placeholder="Text input">
                                     </div>
                                 </div>
 
                             </div>
-                            <div class="span6">
-                                <div class="control-group">
-                                    <label for="inputEmail" class="control-label">Telefone Celular:</label>
-                                    <div class="controls">
-                                        <input type="text" placeholder="Text input">
-                                    </div>
-                                </div>
-                                <div class="control-group">
-                                    <label for="inputEmail" class="control-label">Senha:</label>
-                                    <div class="controls">
-                                        <input type="text" placeholder="Text input">
-                                    </div>
-                                </div>
-                                <div class="control-group">
-                                    <label for="inputEmail" class="control-label">Confirmar-Senha:</label>
-                                    <div class="controls">
-                                        <input type="text" placeholder="Text input">
-                                    </div>
-                                </div>
-
-                            </div>
+                            
                             <div class="rows-fluid">
                                 <div class="span12">
                                     <div class="form-actions">
