--- a/application/modules/admin/views/scripts/mensagem/enviar-mensagem.phtml
+++ b/application/modules/admin/views/scripts/mensagem/enviar-mensagem.phtml
@@ -6,7 +6,7 @@
 
 </ul>
 <fieldset>
-    <legend>Registro e Aprazamento de vacinas</legend>
+    <legend>Enviar Mensagens</legend>
     <?php
     if ($this->mensagem):
         ?>
