--- a/application/modules/admin/views/scripts/vacina/consulta-vacina.phtml
+++ b/application/modules/admin/views/scripts/vacina/consulta-vacina.phtml
@@ -20,14 +20,13 @@
 
     <!--PAGINAÇÃO DAS TABELAS DA PESQUISA-->
 
-    <table class="table table-bordered table-striped">
-        <thead>
+    <table class="table table-bordered table-striped" style="font-size: 13px;">
+        <thead style="background-color: #08c; color: #FFFFFF">
             <tr>
-                <th>#</th>
-                <th>Cod. da Vacina</th>
+                <th>Código da Vacina</th>
                 <th>Nome da Vacina</th>
-                <th>Dt. de Fabricação</th>
-                <th>Dt. de Vencimento</th>
+                <th>Data de Fabricação</th>
+                <th>Data de Vencimento</th>
                 <th>Função</th>
             </tr>
         </thead>
