--- a/application/modules/admin/views/scripts/cartao/consulta-cartao.phtml
+++ b/application/modules/admin/views/scripts/cartao/consulta-cartao.phtml
@@ -22,8 +22,8 @@
 
     <!--PAGINAÇÃO DAS TABELAS DA PESQUISA-->
 
-    <table class="table table-bordered table-striped">
-        <thead>
+    <table class="table table-bordered table-striped" style="font-size: 13px;">
+        <thead style="background-color: #08c; color: #FFFFFF">
             <tr>
                 <th>código</th>
                 <th>Nome</th>
@@ -48,8 +48,8 @@
                 <td>
                     <a href="/admin/cartao/visualisa-cartao"<?php echo $funcionarios->cod_pessoa ?>" title="Visualisar calendário e cartão de vacinas" class="btn btn-warning btn btn-small"><i class="icon-eye-open icon-white"></i></a>
                     <a href="/admin/cartao/cadastro-cartao" title="Registrar e aprazar vacinas" class="btn btn-success btn btn-small"><i class="icon-list-alt icon-white"></i></a>
-                    <a href="/admin/pessoa/editar-funcionario/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Alterar cartão de vacinas" class="btn btn-primary btn btn-small"><i class="icon-pencil icon-white"></i></a>
-                    <a href="/admin/pessoa/excluir-funcionario/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Excluir cartão de vacinas" class="btn btn-danger btn btn-small confirm"><i class="icon-trash icon-white"></i></a>&nbsp;
+                    <a href="/admin/pessoa/editar-funcionario/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Alterar cartão de vacinas" class="btn btn-primary btn btn-small"><i class="icon-edit icon-white"></i></a>
+                    <a href="/admin/pessoa/excluir-funcionario/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Excluir registro de vacinas" class="btn btn-danger btn btn-small confirm"><i class="icon-trash icon-white"></i></a>&nbsp;
                 </td>
             </tr>
 
