--- a/application/modules/admin/views/scripts/pessoa/cadastro-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/cadastro-paciente.phtml
@@ -84,7 +84,7 @@
                         </div>
 
                     </div>
-                    <div class="rows-fluid">
+                  <!--  <div class="rows-fluid">
                         <div class="span12">
                             <div class="form-actions">
                                 <div class="control-group">
@@ -92,7 +92,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
 
                 </div> <!--FIM DO PRIMEIRO MENU-->
 
@@ -149,7 +149,7 @@
                         </div>
                     </div>
 
-                    <div class="rows-fluid"> 
+                    <!--<div class="rows-fluid"> 
                         <div class="span12">
                             <div class="form-actions">
                                 <div class="control-group">
@@ -158,7 +158,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                 </div> <!--FIM DO SEGUNDO MENU-->
 
                 <div id="tab3" class="tab-pane">
