Criação de formularios de controller de ferramentas.

--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -208,7 +208,7 @@
                 <!-- span side-left -->
                 <div class="span1">
                     <!--side bar-->
-                    <aside class="side-left">
+                    <aside class="side-left height-auto" style="height: 120%;">
                         <ul class="sidebar">
                             <li class="active first"> <!--always define class .first for first-child of li element sidebar left-->
                                 <a href="/admin" title="Início">
@@ -340,8 +340,6 @@
                                             <span class="sidebar-text">Consultar</span>
                                         </a>
                                     </li>
-
-
                                 </ul>
                             </li>
                             <li>
@@ -404,7 +402,24 @@
                                     <span class="sidebar-text" style="font-size: 14px">Emitir Relatórios</span>
                                 </a>
                             </li>
+                            <li>
+                                <a title="Ferramentas">
+                                    <div class="helper-font-24">
 
+                                    </div>
+                                    <span class="sidebar-text" style="font-size: 14px">Ferramentas</span>
+                                </a>
+                                <ul class="sub-sidebar-form corner-top shadow-white">
+                                    <li class="title muted">Opções</li>
+                                    <li class="divider"></li>
+                                    <li>
+                                        <a href="/admin/ferramentas/importar-calendario" title="Ferramenta de importação" class="corner-all">
+                                            <i class="icon-book"></i>&nbsp;
+                                            <span class="sidebar-text">Importar Calendário de Vacinação</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
                         </ul>
                     </aside><!--/side bar -->
                 </div><!-- span side-left -->
